--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:5432/tbdb
+    url: jdbc:postgresql://localhost:5432/tbdb
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
