Added verification of transaction collision in DatabaseService

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
+logging:
+  level:
+    com:
+      severett:
+        transactionbank: DEBUG
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/tbdb
